server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: moviestore-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 5400
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 5401
