sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  type: ClusterIP
  selector:
    component: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
